<resources>
    <string name="app_name">Healby</string>

    <string name="onboarding_title_1">Selamat Datang Di Healby</string>
    <string name="onboarding_desc_1">Dapatkan kemudahan dalam pemantauan bayi dan pencegahan stunting melalui helby</string>

    <string name="onboarding_title_2">Monitor Tumbuh Kembang Bayi</string>
    <string name="onboarding_desc_2">Monitor Tumbuh Kembang Bayi Anda Dengan Mudah Melalui Grafik Perkembangan</string>

    <string name="onboarding_title_3">Konsultasi Dengan BabyBot</string>
    <string name="onboarding_desc_3">Konsultasikan Keluhan Perkembangan Bayi Anda Melalui Fitur BabyBot</string>
    <string name="skip">Skip</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_nama_lengkap_kamu">Masukkan nama lengkap kamu</string>
    <string name="email">Email</string>
    <string name="masukkan_email_kamu">Masukkan email kamu</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masukkan_kata_sandi_kamu">Masukkan kata sandi kamu</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_disini">Masuk Disini</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    
    <string name="beranda">Beranda</string>
    <string name="artikel">Artikel</string>
    <string name="posyandu">Posyandu</string>
    <string name="babybot">BabyBot</string>

</resources>