<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".features.onboarding.OnboardingActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboarding_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:fadingEdge="none"
        android:requiresFadingEdge="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/onboarding_viewpager_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@color/primary_gray"
        app:dotsCornerRadius="50dp"
        app:dotsSpacing="8dp"
        app:dotsSize="12dp"
        app:dotsWidthFactor="1.5"
        app:selectedDotColor="@color/primary_light"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/onboarding_viewpager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/onboarding_skip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textFontWeight="400"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_alignParentStart="true"
            tools:targetApi="p"
            android:textColor="@color/primary_gray"/>

        <TextView
            android:id="@+id/onboarding_continue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selanjutnya"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:padding="5dp"
            android:textSize="16sp"
            android:textColor="@color/primary_gray"/>

        <Button
            android:id="@+id/onboarding_start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_gradient_bg"
            android:text="@string/mulai_sekarang"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="16sp"
            android:visibility="gone"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>